--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+<!--
+    <label class="check-container">One
+        <input type="checkbox" checked="checked">
+        <span class="checkmark"></span>
+    </label>
+    <div id="theme-div">
+        <label id="theme-label" for="theme-switcher">Dark Mode</label>
+        <input type="checkbox" id="theme-switcher">
+    </div>
+-->
     <div id="main">
         <h1><i>Advanced</i><br>Higher - Lower</h1>
         <p id="description"></p>
